--- a/slimber/build.gradle
+++ b/slimber/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply from: 'maven-push.gradle'
 
 android {
     compileSdkVersion 23
