Added consumer proguard rules

--- a/slimber/build.gradle
+++ b/slimber/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 3
         versionName "1.0.2"
+        consumerProguardFiles 'proguard-rules.pro'
     }
     buildTypes {
         release {
