--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,25 @@
 buildscript {
 
-    ext.kotlinVersion = '1.1.0'
+    ext.kotlinVersion = '1.1.51'
 
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
+}
+
+plugins {
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
