--- a/slimber/build.gradle
+++ b/slimber/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.6.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
-    testCompile "org.assertj:assertj-core:1.7.1"
+    testCompile "com.google.truth:truth:0.36"
     testCompile "junit:junit:4.12"
 }
