--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,23 @@
 buildscript {
-
-    ext.kotlinVersion = '1.1.51'
+    ext.kotlinVersion = '1.7.20'
 
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
-plugins {
-    id 'com.github.ben-manes.versions' version '0.17.0'
-}
+//plugins {
+//    id 'com.github.ben-manes.versions' version '0.17.0'
+//}
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 }
