--- a/slimber/src/main/AndroidManifest.xml
+++ b/slimber/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
-<manifest package="de.paul_woitaschek.slimber">
-
-    <application/>
-</manifest>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest/>
