--- a/slimber/build.gradle
+++ b/slimber/build.gradle
@@ -4,14 +4,18 @@ plugins {
 }
 
 android {
-    namespace 'de.paul_woitaschek.slimber'
-    compileSdk 33
+    def TARGET_SDK = 33
+
+    namespace 'com.w2sv.slimber'
+    compileSdk TARGET_SDK
 
     defaultConfig {
         minSdk 15
-        targetSdk 33
+        targetSdk TARGET_SDK
+
         versionCode 8
         versionName '1.0.7'
+
         consumerProguardFiles 'proguard-rules.pro'
     }
     buildTypes {
@@ -29,6 +33,6 @@ dependencies {
     api 'com.jakewharton.timber:timber:5.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
-    testImplementation "com.google.truth:truth:0.36"
-    testImplementation "junit:junit:4.13.2"
+    testImplementation 'com.google.truth:truth:0.36'
+    testImplementation 'junit:junit:4.13.2'
 }
