--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ buildscript {
     }
 }
 
-//plugins {
-//    id 'com.github.ben-manes.versions' version '0.17.0'
-//}
+plugins {
+    id 'com.github.ben-manes.versions' version '0.17.0'
+}
 
 allprojects {
     repositories {
