--- a/slimber/build.gradle
+++ b/slimber/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -26,6 +27,20 @@ android {
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'de.paul_woitaschek.slimber'
+                artifactId = 'slimber'
+                version = android.defaultConfig.versionName
+            }
+        }
     }
 }
 
